[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "matadi"
authors = [
  {email = "a.dutzler@gmail.com"},
  {name = "Andreas Dutzler"}
]
description = "Material Definition with Automatic Differentiation"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "constitution", 
  "automatic-differentiation", 
  "scientific-computing", 
  "fem", 
  "finite-elements-analysis", 
  "algorithmic-differentiation", 
  "hyperelasticity", 
  "constitutive-model"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["casadi", "numpy"]

[project.optional-dependencies]
all = ["matplotlib", "scipy"]

[tool.setuptools.dynamic]
version = {attr = "matadi.__about__.__version__"}

[project.urls]
Code = "https://github.com/adtzlr/matadi"
Issues = "https://github.com/adtzlr/matadi/issues"