[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "matadi"
description = "Material Definition with Automatic Differentiation"
authors = [
  {name = "Andreas Dutzler", email = "a.dutzler@gmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
  "python", 
  "constitution", 
  "automatic-differentiation", 
  "scientific-computing", 
  "fem", 
  "finite-elements-analysis", 
  "algorithmic-differentiation", 
  "hyperelasticity", 
  "constitutive-model"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]
dynamic = ["version"]

dependencies = ["casadi", "numpy"]

[project.optional-dependencies]
all = ["matplotlib", "scipy"]

[tool.setuptools.dynamic]
version = {attr = "matadi.__about__.__version__"}

[project.urls]
Homepage = "https://github.com/adtzlr/matadi"
Documentation = "https://github.com/adtzlr/matadi"
Repository = "https://github.com/adtzlr/matadi"
Issues = "https://github.com/adtzlr/matadi/issues"
